* Copywrite notice was too small. (index.css) [Bug 2389]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@7469 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -202,6 +202,7 @@ ul#linktree li span
 {
 	display: block;
 	line-height: 0;
+	font-size: small;
 	padding: 1em;
 }
 #footerarea ul li.copywrite, #footerarea ul li.last
